# MangaWin

./: .gitignore  CONTACT.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer_hooks.nsh  tauri.conf.json  uninstall.nsh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  server_manager.rs
src-tauri/src/app/: state.rs
src-tauri/src/config/: settings.rs
src-tauri/src/engine/: health.rs  install.rs  launcher.rs  mod.rs  process.rs  watchdog.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/runtime/: java.rs
src-tauri/src/state/: store.rs
src-tauri/src/storage/: paths.rs  settings.rs
src/components/: BootScreen.tsx
src/components/Layout/: Titlebar.tsx
src/components/UI/: Button.tsx
src/components/Views/: Advanced.tsx  Diagnostics.tsx  Recovery.tsx  Splash.tsx  WebUI.tsx
src/components/browse/: GlobalSourceResult.tsx  MigrateView.tsx  MigrationTargetDialog.tsx
src/components/common/: index.tsx
src/components/extensions/: PreferenceItem.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  ThemeProvider.tsx
src/hooks/: useApi.ts  useEngine.ts  useMigration.ts
src/lib/: tauri.ts
src/lib/api/: client.ts  queries.ts  (+1 more)
src/pages/: About.tsx  Dashboard.tsx  Downloads.tsx  ExtensionSettings.tsx  Extensions.tsx  GlobalSearch.tsx  History.tsx  Library.tsx  MangaDetail.tsx  More.tsx  Reader.tsx  Search.tsx  Settings.tsx  Updates.tsx
src/styles/: app.css  index.css
(+4 files in other folders)
